contact.css
body{
    /* background: none repeat scroll0 0; */
    font-family: poppins;
    font-size: 15px;
    font-weight: 400;
    /* line-height:1.5em; */
    background-color: #FFD77C;
    align-items: center;
    box-sizing: border-box;
    justify-content: center;
    /* overflow: hidden; */
}
/* Navbar */
.inner-navbar{
    margin: 0 auto;
    width: 1170px;
}
.inner-navbar ul{
    margin: 0;
    padding: 0;
    list-style: none;
    text-align: right;
}

.inner-navbar ul li{
    float: none;
    display: inline-block;
}

.inner-navbar ul li:nth-child(1){
    float: left;
}

.inner-navbar ul li:nth-child(2){
    float: left;
}

.inner-navbar ul li:nth-child(3){
    float: left;
}

.inner-navbar ul li:nth-child(4){
    float: left;
}


.inner-navbar ul li a{
    line-height: 80px;
    color:black;
    padding: 12px 30px;
    text-decoration: none;
    text-transform: uppercase;
    font-size: 12px;
    font-weight: bold;
    font-family: poppins;
}

.inner-navbar ul li a:hover{  
    background: rgba(0,0,0,0.7);
    border-radius:6px;
}
#main{
    width: 100%;
    position: relative;
}
/* Code for a logo */
#logo{
    width:300px;
    height:300px;
    position:relative;
    left:50%;
    top: 0;
    content: "";
    margin-left: -150px;
}
header h1{
    text-align: center;
}
header h1 span{
    color: #6CB840;
}
.text{
    align-items: center;
    text-align: center;
}
.box{
    display: flex;
    align-items: center;
    justify-content: center;
    height:10vh;
}
.form-box{
    padding: 10px;
    border-radius: 20px;
    background: #fff;
    /* box-shadow:10px 10px 15px #6CB840,-10px -10px 15px #fff; */
}
.form-box input{
    font-size: 18px;
    color:black;
    padding: 5px 5px;
    border: none;
    outline:none;
    background: #fff;
}
/* code for button */
 #button{ 
    margin: 0;
    padding: 0;
     color: #fff;
     background:#6CB840;
    width: 150px;
    height: 50px;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    text-align: center;
    font-size:20px;
    margin-bottom: 30px;
    border-radius: 5px;
    cursor:pointer;
 }
  
  .container{
    max-width: 1170px;
    margin: auto;
    /* code for footer */

  }
  .footer{
    background: #C9ECB5;
    margin-top:180px;
    width: 100%;
    /* padding:70px 0; */

  }
  .row{
    display: flex;
    flex-wrap: wrap;
  }
  .footer-column{
    width: 25%;
    footer-item1::after{
        border-right: 3px dashed black;
    }
    /* padding: 0 15px; */
        
  }
  .footer-column h4{
    font-size: 18px;
    color: black;
    margin-bottom: 35px;
    font-weight: 500;
    position: relative;
  }
  .footer-column h4::before{
    content: '';
    position: absolute;
    left: 0;
    bottom: -10px;
    background: lightgrey;
    height: 2px;
    box-sizing: border-box;
    width: 50px;

  }
  .footer-column p{
    list-style: none;
    text-decoration: none;
    color:black;
    display: block;
    transition:all .3s ease;
  }
  .footer-column p:hover{
    color:red;
    padding-left: 6px;
  }
.footer-column .social-link{
    display: inline;
    height:40px;
    width: 40px;
    background: white;
    transition: all .5s ease;

}
.footer-column .send a{
        display: inline-block;
        /* margin-top: 20px;
        padding: 8px 20px; */
        background: #6cb840;;
        color: #fff;
        /* border-radius: 40px; */
        font-weight:500;
        letter-spacing: 1px;
        text-decoration: none;    
    }
.footer-column .social-link a:hover{
    color: red;
    background: white;

}
@media(max-width:765px){
    .footer-column{
        width: 50%;
        margin-bottom: 30px;

    }
}

@media(max-width:565px){
    .footer-column{
        width: 100%;
               
    }
}

